[package]
name = "crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
scraper = "0.12.0"
url = "2"
reqwest = "0.10"
chashmap = "2.2.2"
num_cpus = "1.13.0"
futures = "0.3.1"

[profile.release]
lto = true
panic = 'abort'

